# curiso

./: .eslintignore  .gitignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  package.json  tailwind.config.ts  theme.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml
client/src/: App.tsx  index.css  main.tsx
client/src/components/: AddModelDialog.tsx  BackupDialog.tsx  BoardSelector.tsx  ChatNode.tsx  ClearDataDialog.tsx  CodeBlock.tsx  ErrorBoundary.tsx  HotKeySettings.tsx  ImageUpload.tsx  MetricsDialog.tsx  ModelSelector.tsx  RAGManager.tsx  RAGSelector.tsx  SettingsDialog.tsx  ThinkingBlock.tsx  WelcomeDialog.tsx  context-menu.tsx
client/src/components/ui/: dropdown-menu.tsx  sidebar.tsx
client/src/lib/: colors.ts  constants.ts  db.ts  embeddings.ts  encryption.ts  localmodels.ts  metricstore.ts  ollama.ts  pdf.ts  queryClient.ts  rag.ts  remotemodels.ts  scraper.ts  secureStorage.ts  storage.ts  store.ts  toksec.ts  types.ts  url.ts  utils.ts
client/src/pages/: Dashboard.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
