[package]
name = "curiso-ai"
version = "1.0.1"
description = "Curiso AI Desktop"
authors = ["Carsen Klock"]
license = "MIT"
edition = "2021"
build = "build.rs" 

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [ 
    
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
