[package]
name = "curiso-ai"
version = "1.1.1"
description = "Curiso AI Desktop"
authors = ["Carsen Klock"]
license = "MIT"
edition = "2021"
build = "build.rs" 

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [ 
    "devtools"
] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
